--- a/api.ipynb
+++ b/api.ipynb
@@ -23,11 +23,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of dream_factory_evals.dream_factory_mcp failed: Traceback (most recent call last):\n",
+      "  File \"/home/hamza/dev/dream_factory_evals/.venv/lib/python3.12/site-packages/IPython/extensions/autoreload.py\", line 283, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/hamza/dev/dream_factory_evals/.venv/lib/python3.12/site-packages/IPython/extensions/autoreload.py\", line 483, in superreload\n",
+      "    module = reload(module)\n",
+      "             ^^^^^^^^^^^^^^\n",
+      "  File \"/home/hamza/.local/share/uv/python/cpython-3.12.7-linux-x86_64-gnu/lib/python3.12/importlib/__init__.py\", line 131, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 866, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 995, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
+      "  File \"/home/hamza/dev/dream_factory_evals/src/dream_factory_evals/dream_factory_mcp.py\", line 6, in <module>\n",
+      "    BASE_URL = os.environ[\"BASE_URL\"]\n",
+      "               ~~~~~~~~~~^^^^^^^^^^^^\n",
+      "  File \"<frozen os>\", line 714, in __getitem__\n",
+      "KeyError: 'BASE_URL'\n",
+      "]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'resource': [{'employee_id': 1,\n",
+       "   'first_name': 'Alice',\n",
+       "   'last_name': 'Johnson',\n",
+       "   'email': 'alice.johnson@example.com',\n",
+       "   'date_joined': '2022-01-15',\n",
+       "   'department_id': 1,\n",
+       "   'role': 'Staff'}]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "get_table_records(table_name=table_name, filter=\"(first_name != 'Alice')\", order_field=\"employee_id\")"
+    "get_table_records(table_name=table_name, filter=\"(first_name = 'Alice')\")"
    ]
   },
   {
